<resources>
    <string name="app_name">BatteryInformation</string>

    <string name="battery_capacity">Capacity</string>
    <string name="battery_health">Health</string>
    <string name="battery_health_cold">Cold</string>
    <string name="battery_health_dead">Dead</string>
    <string name="battery_health_good">Good</string>
    <string name="battery_health_over_voltage">Over Voltage</string>
    <string name="battery_health_overheat">Overheat</string>
    <string name="battery_health_unspecified_failure">Unspecified Failure</string>
    <string name="battery_level">Level</string>
    <string name="battery_plugged_ac">AC Charger</string>
    <string name="battery_plugged_none">None</string>
    <string name="battery_plugged_usb">USB Port</string>
    <string name="battery_plugged_wireless">Wireless</string>
    <string name="battery_power_source">Power Source</string>
    <string name="battery_present">Battery</string>
    <string name="battery_present_none">None</string>
    <string name="battery_present_yes">Yes</string>
    <string name="battery_status">Status</string>
    <string name="battery_status_charging">Charging</string>
    <string name="battery_status_discharging">Discharging</string>
    <string name="battery_status_full">Full</string>
    <string name="battery_technology">Technology</string>
    <string name="battery_temperature">Temperature</string>
    <string name="battery_voltage">Voltage</string>
</resources>
