<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_56dp"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_toolbar" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="@dimen/dimen_10dp"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- Present status-->
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:clickable="true"
                card_view:cardCornerRadius="@dimen/dimen_5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_present"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_battery_present"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:text="--"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Battery Health-->
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:clickable="true"
                card_view:cardCornerRadius="@dimen/dimen_5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_health"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_battery_health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:text="--"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Battery Level-->
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:clickable="true"
                card_view:cardCornerRadius="@dimen/dimen_5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_level"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_battery_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:text="--"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Battery Power Source-->
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:clickable="true"
                card_view:cardCornerRadius="@dimen/dimen_5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_power_source"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_battery_power_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:text="--"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Battery Status-->
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:clickable="true"
                card_view:cardCornerRadius="@dimen/dimen_5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_status"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_battery_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:text="--"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Battery Technology-->
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:clickable="true"
                card_view:cardCornerRadius="@dimen/dimen_5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_technology"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_battery_technology"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:text="--"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Battery Temperature-->
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:clickable="true"
                card_view:cardCornerRadius="@dimen/dimen_5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_temperature"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_battery_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:text="--"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Battery Voltage-->
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:clickable="true"
                card_view:cardCornerRadius="@dimen/dimen_5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_voltage"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_battery_voltage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:text="--"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>